RESOLVED FIXED292274
[WGSL][ASAN] Check if poisoning is allowed before asserting
https://bugs.webkit.org/show_bug.cgi?id=292274
Summary [WGSL][ASAN] Check if poisoning is allowed before asserting
Tadeu Zagallo
Reported 2025-04-29 07:49:18 PDT
...
Attachments
Tadeu Zagallo
Comment 1 2025-04-29 07:49:20 PDT
Tadeu Zagallo
Comment 2 2025-04-29 07:53:41 PDT
EWS
Comment 3 2025-04-29 10:28:10 PDT
Committed 294282@main (15cd6df03d2a): <https://commits.webkit.org/294282@main> Reviewed commits have been landed. Closing PR #44688 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.