[WGSL][ASAN] Check if poisoning is allowed before asserting https://bugs.webkit.org/show_bug.cgi?id=292274 rdar://150203489

Reviewed by Mike Wyrzykowski.

We were failing the RELEASE_ASSERT when ASAN was enabled but allow_user_poisoning
was set to 0. To fix that we simply test poisoning a local variable to check if
we can poison. I added a test to verify that we no longer crash, but it's not
trivial to add a test that confirms we do poison when allow_user_poisoning=1.
I tested that locally by removing the call to unpoison and confirming we crash
with a user-after-poison failure.

* Source/WebGPU/WGSL/AST/ASTBuilder.cpp:
(WGSL::AST::Builder::canPoison):
* Source/WebGPU/WGSL/AST/ASTBuilder.h:
(WGSL::AST::Builder::construct):
* Source/WebGPU/WGSL/tests/asan-disallow-user-poisoning.wgsl: Added.

Canonical link: https://commits.webkit.org/294282@main