Source/WebGPU/WGSL/tests/asan-disallow-user-poisoning.wgsl
@@ -1,0 +1,3 @@
+// RUN: ASAN_OPTIONS=allow_user_poisoning=0 %wgslc
+
+const x = 1;
